# let-it-rip

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  slides.html
ddpm/: schedule.py
notebooks/: 01_jax_basics.ipynb  02_forward_process.ipynb  03_reverse_process.ipynb  04_sampling.ipynb  05_cfg.ipynb  06_dit.ipynb
solutions/: diffusion.py  dit.py  guidance.py  sampling.py  schedule.py
