[project]
name = "let-it-rip"
version = "0.1.0"
description = "Diffusion tutorial in jax"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cpu]>=0.4.30",
    "jaxtyping>=0.2.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[tool.ruff.lint]
ignore = ["F722"]  # jaxtyping shape strings are intentionally not valid Python expressions

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F811"]  # stub cells are intentionally redefined by solution cells

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "ruff>=0.15.15",
]
